// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Header for board of experts unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2a:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="write_and_speak.chatHistory"
            class="memori-button memori-button--ghost memori-button--md"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.chatHistory
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2c:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.showExpertsInTheBoard"
            class="memori-button memori-button--ghost memori-button--md memori-button--disabled memori-button--icon-only"
            data-disabled=""
            disabled=""
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-users"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2e:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2g:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header for board of experts with session open unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2i:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="write_and_speak.chatHistory"
            class="memori-button memori-button--ghost memori-button--md"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.chatHistory
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2k:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.showExpertsInTheBoard"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-users"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="9"
                  cy="7"
                  r="4"
                />
                <path
                  d="M22 21v-2a4 4 0 0 0-3-3.87"
                />
                <path
                  d="M16 3.13a4 4 0 0 1 0 7.75"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2m:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r2o:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r3:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with audio disabled unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:ri:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with clear button unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r14:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="clearHistory"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-trash2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 6h18"
                />
                <path
                  d="M19 6v14c0 1-1 2-2 2H7c-1 0-2-1-2-2V6"
                />
                <path
                  d="M8 6V4c0-1 1-2 2-2h4c1 0 2 1 2 2v2"
                />
                <line
                  x1="10"
                  x2="10"
                  y1="11"
                  y2="17"
                />
                <line
                  x1="14"
                  x2="14"
                  y1="11"
                  y2="17"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r16:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r18:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with deep thought and session open unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r24:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="write_and_speak.chatHistory"
            class="memori-button memori-button--ghost memori-button--md"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.chatHistory
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r26:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r28:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with deep thought logged but without permission flag unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1i:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="write_and_speak.chatHistory"
            class="memori-button memori-button--ghost memori-button--md"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.chatHistory
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1k:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___kBCdl memori-header--dropdown"
    >
      <span
        class="styles-module__root___-ALla"
      >
        <span
          class="styles-module__trigger___V2aIF"
          id="base-ui-:r1p:"
        >
          <span
            style="display: inline-flex;"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="login.user"
              class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-dropdown--user-trigger-button"
              data-base-ui-click-trigger=""
              id="base-ui-:r1n:"
              tabindex="0"
              type="button"
            >
              <span
                class="memori-button__icon"
              >
                <svg
                  class="lucide lucide-user"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with deep thought logged with permission flag unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1r:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="write_and_speak.chatHistory"
            class="memori-button memori-button--ghost memori-button--md"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-message-circle"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
                />
              </svg>
            </span>
            <span
              class="memori-button__content"
            >
              write_and_speak.chatHistory
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1t:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___kBCdl memori-header--dropdown"
    >
      <span
        class="styles-module__root___-ALla"
      >
        <span
          class="styles-module__trigger___V2aIF"
          id="base-ui-:r22:"
        >
          <span
            style="display: inline-flex;"
          >
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              aria-label="login.user"
              class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-dropdown--user-trigger-button"
              data-base-ui-click-trigger=""
              id="base-ui-:r20:"
              tabindex="0"
              type="button"
            >
              <span
                class="memori-button__icon"
              >
                <svg
                  class="lucide lucide-user"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                  />
                  <circle
                    cx="12"
                    cy="7"
                    r="4"
                  />
                </svg>
              </span>
            </button>
          </span>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with deep thought unlogged unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1e:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1g:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with position unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <div
      class="memori-header--position"
    >
      <span
        class="styles-module__root___-ALla"
      >
        <span
          class="styles-module__trigger___V2aIF"
          id="base-ui-:r5:"
        >
          <span
            style="display: inline-flex;"
          >
            <span
              class="styles-module__root___kBCdl"
            >
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="widget.position"
                class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button--position memori-header--button--position--active"
                data-base-ui-click-trigger=""
                id="base-ui-:r8:"
                tabindex="0"
                type="button"
              >
                <span
                  class="memori-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-map-pin"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 10c0 4.993-5.539 10.193-7.399 11.799a1 1 0 0 1-1.202 0C9.539 20.193 4 14.993 4 10a8 8 0 0 1 16 0"
                    />
                    <circle
                      cx="12"
                      cy="10"
                      r="3"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
        </span>
      </span>
    </div>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:ra:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:rc:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with settings button unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r10:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r12:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with share button unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:rk:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <div
      class="memori-dropdown memori-share-button memori-share-button--align-left"
    >
      <span
        class="styles-module__root___-ALla"
      >
        <span
          class="styles-module__trigger___V2aIF"
          id="base-ui-:rq:"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            id="base-ui-:rr:"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-share2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="18"
                  cy="5"
                  r="3"
                />
                <circle
                  cx="6"
                  cy="12"
                  r="3"
                />
                <circle
                  cx="18"
                  cy="19"
                  r="3"
                />
                <line
                  x1="8.59"
                  x2="15.42"
                  y1="13.51"
                  y2="17.49"
                />
                <line
                  x1="15.41"
                  x2="8.59"
                  y1="6.51"
                  y2="10.49"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </div>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:ru:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with speaker muted unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:re:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume-x"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <line
                  x1="22"
                  x2="16"
                  y1="9"
                  y2="15"
                />
                <line
                  x1="16"
                  x2="22"
                  y1="9"
                  y2="15"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:rg:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;

exports[`renders Header with user activated speak unchanged 1`] = `
<div>
  <div
    class="memori-header"
  >
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1a:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="widget.sound"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-volume2"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11 4.702a.705.705 0 0 0-1.203-.498L6.413 7.587A1.4 1.4 0 0 1 5.416 8H3a1 1 0 0 0-1 1v6a1 1 0 0 0 1 1h2.416a1.4 1.4 0 0 1 .997.413l3.383 3.384A.705.705 0 0 0 11 19.298z"
                />
                <path
                  d="M16 9a5 5 0 0 1 0 6"
                />
                <path
                  d="M19.364 18.364a9 9 0 0 0 0-12.728"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
    <span
      class="styles-module__root___-ALla"
    >
      <span
        class="styles-module__trigger___V2aIF"
        id="base-ui-:r1c:"
      >
        <span
          style="display: inline-flex;"
        >
          <button
            aria-label="login.login"
            class="memori-button memori-button--ghost memori-button--md memori-button--icon-only memori-header--button memori-header--button-login"
            tabindex="0"
            type="button"
          >
            <span
              class="memori-button__icon"
            >
              <svg
                class="lucide lucide-user"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"
                />
                <circle
                  cx="12"
                  cy="7"
                  r="4"
                />
              </svg>
            </span>
          </button>
        </span>
      </span>
    </span>
  </div>
  <div
    aria-atomic="false"
    aria-label="Notifications"
    aria-live="polite"
    aria-relevant="additions text"
    class="memori-alert-viewport memori-alert-viewport--top-end"
    role="region"
    tabindex="-1"
  />
</div>
`;
